# mayournaise

./: README.md  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: main.rs
frontend/: .env  README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo
frontend/src/: App.svelte  App.tsx  constants.ts  index.css
frontend/src/components/: InventorySelector.tsx
frontend/src/hooks/mutations/: useSubmitOrderMutation.ts
frontend/src/hooks/queries/: useInventoryQuery.ts
frontend/src/lib/: InventorySelector.svelte  Reserve.svelte  api.js
frontend/src/routes/: +page.svelte
src/routes/: +page.svelte
